viene d desktop hit hub, proyecto base terreno y helicoptero

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,15 @@ Library
 TowerBlock.sln
 TowerBlock.userprefs
 .gitattributes
+044cce3bc85b1694d9d60a151c7b910c.clust
+/Temp/ProcessJobs/52f999ca2723da875537a8c6396fe5ab.clust
+73a49c7e361314028cdf0557dd78c709.clust
+81c3b44ff075f3d2ca1a2d540f7657e4.lt
+81c3b44ff075f3d2ca1a2d540f7657e4.vis
+9a5029772f7513990b2c1ba600ee5f37.lt
+9a5029772f7513990b2c1ba600ee5f37.vis
+e6813bfd70e91c1e30a4f0b034fdaa3a.clust
+ProcessJobs
+clase9_5.sln
+clase9_5.userprefs
+Assembly-CSharp.csproj
